# TuAvocadonet2.0

./: .env.example  404.html  README.md  implementation_plan.md  index.html  package-lock.json  package.json  tailwind.config.js  tsconfig.json  tsconfig.node.json  tsconfig.node.tsbuildinfo  vite.config.js
assets/: AboutPage--SmxXwXS.js  AboutPage-B7KAI6wT.js  AboutPage-BiH7EtY6.js  AboutPage-Bqj2NEPs.js  AboutPage-DEqDn31g.js  AboutPage-DR3YJryk.js  AboutPage-Do0K_a_C.js  AboutPage-legacy-BRuwbl48.js  AboutPage-legacy-CmEyAOvq.js  AboutPage-legacy-DC3evRWP.js  AboutPage-legacy-DJEHCkr3.js  AboutPage-legacy-DQzH9m2q.js  AboutPage-legacy-DSmXN4rU.js  AboutPage-legacy-djsgFJH0.js  BlogPage-CTP_3Jjk.js  BlogPage-CVAysT0n.js  BlogPage-C_7m3Q7X.js  BlogPage-CszjvZxJ.js  BlogPage-GsSQWCiz.js  BlogPage-JmMkLGqk.js  BlogPage-legacy-B3_-YM3u.js  BlogPage-legacy-BYIQMSb9.js  BlogPage-legacy-D0bvJawB.js  BlogPage-legacy-DyoVEd65.js  BlogPage-legacy-VLKeJoB9.js  BlogPage-vUMo1r71.js  (+182 more)
backend/: .env.example  .gitignore  README.md  TESTING_SETUP.md  UV_DEBUGGING.md  docker-compose.yml  langgraph.json  pyproject.toml
backend/app/: config.py  main.py
backend/app/api/: triaje.py
backend/app/models/: schemas.py
backend/app/monitoring/: logger.py
backend/app/services/langgraph/: graph.py  prompts.py  state.py
backend/app/services/nodes/extractor/: node.py
backend/app/services/nodes/preprocessor/: node.py
backend/app/services/rag/: rag_service.py
backend/data/raw/: constitucion_sample.txt
backend/scripts/: index_legal_docs.py  ingest_docs.py  query_rag.py  setup_db.py
(+58 files in other folders)
